# Machine_Learning_demonstrator

./: .gitignore  LICENSE  README.md  api_key_test.py  docker-compose.yml  embed.py  main.py  pipeline.py  pipeline_analysis.py  playlist_id.txt  playlists.json  requirements.txt  scrap-genres.py  scrapeV2.py
.github/workflows/: publish.yml
application/: apps.py  urls.py  views.py
application/static/js/: account.js  application.js
application/templates/: account.html  application.html  base.html  tracks.html  tsne.html  umap.html
backend/: .gitignore  Dockerfile  example.env  main.py  playlists.json  pyproject.toml  requirements.txt
backend/application/: apps.py  urls.py  views.py
backend/application/static/js/: tracks.js
backend/application/static/styles/: account.css  base.css  tracks.css
backend/application/templates/: account.html  tracks.html
backend/application/views/: classify.py  compose.py  data.py  deezer.py  genre.py  pca.py  processing.py  scrape.py  spotify.py  tracks.py  umap.py
backend/data/: embeddings.pickle  metadata.pickle
backend/draft/: lyrics.json  pipeline_analysis.py  saved_embeddings.json  scrap-lyrics.py  test_lyrics.json  test_mathis.py  text_embedding.py
backend/modules/: conversions.py  scrap.py
backend/project/: settings.py  urls.py
core/: scrap.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  substitute_environment_variables.sh  tailwind.config.js
frontend/src/: App.vue
frontend/src/assets/: index.css  main.scss
frontend/src/components/: ErrorModalComponent.vue  HeroComponent.vue  MainSidebar.vue  TrackCardComponent.vue  TracksTableComponent.vue
frontend/src/components/ui/button/: index.ts
frontend/src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  DropdownMenuItem.vue  DropdownMenuLabel.vue  DropdownMenuRadioItem.vue  DropdownMenuSeparator.vue  DropdownMenuSubContent.vue  DropdownMenuSubTrigger.vue
frontend/src/components/ui/input/: Input.vue
frontend/src/components/ui/separator/: Separator.vue
frontend/src/router/: index.ts
frontend/src/stores/: axiosInstance.ts  backend.ts  spotifyInstance.ts  utils.ts
frontend/src/views/: AccountView.vue  ClassifyView.vue  ComposeView.vue  DashboardView.vue  PCAView.vue  ScrapeView.vue  SearchView.vue  TracksView.vue  UMAPView.vue  VarianceView.vue
project/: settings.py  urls.py
(+13 files in other folders)
