[tool.poetry]
name = "Deez'Nalayzer backend"
version = "0.1.0"
description = ""
authors = ["Alix ANNERAUD <alix@anneraud.fr>", "Josselin DULONGCOURTY", "Mathis SAUNIER"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.14.1"
django = "^5.1.4"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
scikit-learn = "^1.6.0"
numba = "^0.60.0"
whitenoise = "^6.8.2"
librosa = "^0.10.2.post1"
soundfile = "^0.12.1"
pydub = "^0.25.1"
datasets = "^3.2.0"
transformers = "^4.47.0"
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
torchaudio = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
# torch = {version = "^2.5.1", source = "pytorch_cuda"}
# torchaudio = {version = "^2.5.1", source = "pytorch_cuda"}

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
