[tool.poetry]
name = "Deez'Nalayzer backend"
version = "0.1.0"
description = ""
authors = ["Alix ANNERAUD <alix@anneraud.fr>", "Josselin DULONGCOURTY", "Mathis SAUNIER"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
scipy = "1.14.*"
django = "5.1.*"
pandas = "2.2.*"
python-dotenv = "1.0.*"
scikit-learn = "1.6.*"
numba = "0.60.*"
whitenoise = "6.8.*"
librosa = "0.10.*"
soundfile = "0.12.*"
pydub = "0.25.*"
datasets = "3.2.*"
transformers = "4.47.*"
umap-learn = "0.5.*"
django-cors-headers = "4.6.*"
djangorestframework = "3.15.*"
torch = {version = "2.5.*", source = "pytorch_cpu"}
torchaudio = {version = "2.5.*", source = "pytorch_cpu"}
# torch = {version = "2.5.*", source = "pytorch_cuda"}
# torchaudio = {version = "2.5.*", source = "pytorch_cuda"}

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
